--- a/Style.css
+++ b/Style.css
@@ -13,6 +13,12 @@
 * {
       font-family: 'Space Mono', monospace;
 }
+.outerdiv{
+    margin-bottom: 35px;
+    font-size: x-small;
+    color: hsl(183, 100%, 15%);
+    font-weight: bold;
+}
 #main{
     display: flex;
     flex-direction: row;
