--- a/Style.css
+++ b/Style.css
@@ -19,6 +19,7 @@
     color: hsl(183, 100%, 15%);
     font-weight: bold;
 }
+
 #main{
     display: flex;
     flex-direction: row;
@@ -52,6 +53,9 @@
     margin-top: 5px;
     border-radius: 5px;
     opacity: 20%;
+}
+#inp:hover{
+    border: 2px solid hsl(172, 67%, 45%);
 }
 .lefticon{
     position: absolute;
@@ -92,7 +96,10 @@
     color: white;
     border: none;
     outline: none;
-    background-color:hsl(183, 100%, 15%) ;
+    background-color:hsl(183, 100%, 15%);
+}
+.bt:hover{
+    background-color: hsl(172, 67%, 45%) ;
 }
 #group2{
     display: flex;
@@ -110,6 +117,21 @@
     border: none;
     outline: none;
     background-color:hsl(183, 100%, 15%) ;
+}
+.bt1:hover{
+    background-color: hsl(172, 67%, 45%) ;
+}
+.custm{
+    border-radius: 3px;
+    width: 75px;
+    height: 30px;
+    color: white;
+    border: none;
+    outline: none;
+    background-color:hsl(186, 14%, 43%) ;
+}
+.custm:hover{
+    background-color: hsl(172, 67%, 45%);
 }
 .div1{
     width: 200px;
@@ -135,6 +157,9 @@
     margin-top: 5px;
     border-radius: 5px;
     opacity: 20%;
+}
+#inp2:hover{
+    border: 2px solid hsl(172, 67%, 45%);
 }
 .leftoutermost{
     display: flex;
@@ -195,5 +220,10 @@
     border: none;
     outline: none;
     background-color:hsl(172, 67%, 45%);
-    opacity: 10%;
+    opacity: 35%;
+}
+#resetbtn:hover{
+    background-color:hsl(172, 67%, 45%);
+    opacity: 80%;
+    color: white;
 }
